fixtures/errors/not_enough_elements/dist/index.js
const [a, b, c] = [1];
console.log(a);
//# sourceMappingURL=./not_enough_elements.esc.map
